# rhoai-portkey-poc

./: .env.example  README.md  TROUBLESHOOTING.md  pyproject.toml  summary.md
demos/: DEMO_README.md  config.py  run_all.sh
demos/caching/: redis_caching_demo.md  redis_caching_demo.py  semantic_caching_demo.md  semantic_caching_demo.py
demos/fallback/: config.py  fallback_demo.md  fallback_demo.py
demos/guardrails/: guardrails_demo.md  guardrails_demo.py
demos/llamastack/: llamastack_demo.py
demos/load_balance/: config.py  load_balance_demo.md  load_balance_demo.py
demos/rhoai/: connectivity_test.py
docs/: COMPARISON-MATRIX.md  RHOAI-INTEGRATION.md
portkey/: MakeFile  install.sh  uninstall.sh
portkey/helm/: Chart.yaml  values.yaml
portkey/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  ollama-deployment.yaml  ollama-pvc.yaml  ollama-service.yaml  poddisruptionbudget.yaml  route.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  vllm-deployment.yaml
