[project]
name = "portkey-rhoai"
version = "0.2.0"
description = "Portkey AI Gateway POC for Red Hat OpenShift AI (RHOAI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-stack-client>=0.3.5",
    "portkey-ai>=2.1.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
]
